--- a/css/style.css
+++ b/css/style.css
@@ -30,19 +30,27 @@ a:hover {
   left: 100px;
 }
 
+
+
+
+#particles-js{
+  position: absolute;
+  width: 60%;
+  right: 0;
+  background: linear-gradient(to bottom, rgba(34,125,170,1) 0%, rgba(81,172,205,1) 100%);
+  display: table;
+  height: 700px; 
+  z-index: 20;
+}
+
 .main-section{
-  /* background: url(../images/main-header.jpg) no-repeat center center scroll; */
-  background: rgba(34,125,170,1);
- 
   background: linear-gradient(to bottom, rgba(34,125,170,1) 0%, rgba(81,172,205,1) 100%);
   display: table;
   width: 100%;
   height: 700px;
   position: relative;
-  /*background-size: cover;*/
   color: white;
 }
-
 
 .main-section .typeBackground{
  /* display: table;*/
@@ -101,6 +109,18 @@ a:hover {
 
 .main-section h2 > strong {
   color: white;
+}
+
+#main-section-area{
+  position: absolute;
+  z-index: 30;
+  height: 700px;
+}
+
+#main-section-area .section-content{
+  height: 450px;
+  padding-top: 250px;
+  padding-bottom: 50px;
 }
 
 .section {
@@ -353,6 +373,10 @@ a > img {
     width: 40%;
   }
 
+  #main-section-area .nav{
+    margin-left: -70px;
+  }
+
   .content {
     width: 60%;
   }
@@ -410,7 +434,15 @@ a > img {
 
 @media only screen and (max-width: 767px) {
 
+  #particles-js{
 
+    height: 670px; 
+    
+  }
+
+  #main-section-area .nav{
+    margin-left: 0px;
+  }
 
 .main-section .typeBackground{
   width: 180px;
