--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,9 @@ a:hover {
   z-index: 20;
 }
 
+#particles-js canvas{
+  cursor: pointer;
+}
 .main-section{
   background: linear-gradient(to bottom, rgba(34,125,170,1) 0%, rgba(81,172,205,1) 100%);
   display: table;
